[package]
name = "librivox_search_support_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"]}
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
error-chain = "0.12.4"
bytes = "1.2.1"
unrar = "0.4.4"